--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,36 @@
-/dist
-/node_modules
+# Node modules
+node_modules/
+
+# Build output
+dist/
+build/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+logs/
+*.log
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# LocalStack volumes
+volume/
+
+# VSCode settings
+.vscode/
+
+# Jest coverage
+coverage/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# package lock files
 /package-lock.json
+
+#environment files
+.env.bak
+.env
