--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   localstack:
     container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
@@ -17,3 +15,29 @@ services:
     volumes:
       - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
+      
+  setup:
+    build:
+      context: .
+      dockerfile: Dockerfile_setup_aws
+    image: my-aws-cli
+    platform: linux/amd64
+    container_name: setup-localstack
+    depends_on:
+      - localstack
+    volumes:
+      - .:/app
+    working_dir: /app
+
+  oauth2-app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: oauth2-app
+    ports:
+      - "3000:3000"
+    depends_on:
+      setup:
+        condition: service_completed_successfully
+    volumes:
+      - .:/usr/src/app
