--- a/cloudFormation/secrets.yaml
+++ b/cloudFormation/secrets.yaml
@@ -1,4 +1,4 @@
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: "2010-09-09"
 Description: OAuth2 client credentials secret
 
 Resources:
