--- a/cloudFormation/kms.yaml
+++ b/cloudFormation/kms.yaml
@@ -1,4 +1,4 @@
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: "2010-09-09"
 Description: KMS key for OAuth2 token signing
 
 Resources:
