--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-AWS_SM_ENDPOINT=http://localhost:4566
+AWS_SM_ENDPOINT=http://localstack:4566
 AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=test
 AWS_SECRET_ACCESS_KEY=test123supersafe
 OAUTH_SECRET_ID=oauth/credentials
-KMS_KEY_ID=27bd22ff-5fb0-465f-9d20-1028333f355d
+KMS_KEY_ID=
 
 LOCALSTACK_DOCKER_NAME=oauth2-localstack
 DEBUG=1
